fix overflow x on body

--- a/begoodPlus/static_cdn/assets/base/css/style.scss
+++ b/begoodPlus/static_cdn/assets/base/css/style.scss
@@ -31,6 +31,9 @@
     font-display: swap;
 }
 */
+body {
+  max-width: 100vw;
+}
 body.waiting * {
   cursor: progress;
 }
